@@ -1,4 +1,4 @@
-/* $Id: final2finalb.c,v 1.3.4.2.2.1 2010/06/18 09:50:11 uehira Exp $ */
+/* $Id: final2finalb.c,v 1.3.4.2.2.2 2010/09/20 07:01:24 uehira Exp $ */
 /******************************************************************/
 /*    final2finalb.c              9/21/94 urabe                   */
 /*    97.10.3 FreeBSD  99.4.19 byte-order-free                    */
@@ -9,14 +9,23 @@
 #endif
 
 #include  <stdio.h>
+#include  <stdlib.h>
+#include  <string.h>
 
 #include "winlib.h"
 
-adj_sec(tm,se,tmc,sec)
-  int *tm,*tmc;
-  double *se,*sec;
+static const char rcsid[] =
+   "$Id: final2finalb.c,v 1.3.4.2.2.2 2010/09/20 07:01:24 uehira Exp $";
+
+/* prototypes */
+static void adj_sec(int *, double *, int *, double *);
+int main(int, char *[]);
+
+static void
+adj_sec(int *tm, double *se, int *tmc, double *sec)
   {
   int i,j;
+
   for(i=0;i<5;i++) tmc[i]=tm[i];
   if((*sec=(*se))<0.0)
     {
@@ -31,9 +40,8 @@ adj_sec(tm,se,tmc,sec)
   tmc[6]=(int)(*sec*1000.0)%1000;
   }
 
-main(argc,argv)
-  int argc;
-  char *argv[];
+int
+main(int argc, char *argv[])
   {
   int i,tm[6],tmc[7];
   double se,sec,mag;
@@ -45,20 +53,20 @@ main(argc,argv)
   /*   } d; */
   struct FinalB  d;  /* 28 bytes / event */
 
-  while(fgets(tbuf,256,stdin)!=NULL)
+  while(fgets(tbuf,sizeof(tbuf),stdin)!=NULL)
     {
-    sscanf(tbuf,"%d%d%d%d%d%lf%f%f%f%lf%s%s",
+    sscanf(tbuf,"%d%d%d%d%d%lf%f%f%f%lf%20s%20s",
       &tm[0],&tm[1],&tm[2],&tm[3],&tm[4],&se,
       &d.alat,&d.along,&d.dep,&mag,owner,diag);
     adj_sec(tm,&se,tmc,&sec);
-    d.time[0]=(unsigned char)tmc[0];
-    d.time[1]=(unsigned char)tmc[1];
-    d.time[2]=(unsigned char)tmc[2];
-    d.time[3]=(unsigned char)tmc[3];
-    d.time[4]=(unsigned char)tmc[4];
-    d.time[5]=(unsigned char)((int)sec);
-    d.time[6]=(unsigned char)(((int)(sec*10.0))%10);
-    d.time[7]=(int)(mag*10.0+0.5);
+    d.time[0]=(int8_w)tmc[0];
+    d.time[1]=(int8_w)tmc[1];
+    d.time[2]=(int8_w)tmc[2];
+    d.time[3]=(int8_w)tmc[3];
+    d.time[4]=(int8_w)tmc[4];
+    d.time[5]=(int8_w)((int)sec);
+    d.time[6]=(int8_w)(((int)(sec*10.0))%10);
+    d.time[7]=(int8_w)((int)(mag*10.0+0.5));
     *d.diag=(*d.owner)=0;
     if(*diag) strncpy(d.diag,diag,4);
     if(*owner) strncpy(d.owner,owner,4);
@@ -70,4 +78,6 @@ main(argc,argv)
       }
     fwrite(&d,sizeof(d),1,stdout);
     }
+
+  exit(0);
   }
